--- a/src/pages/testing/test-creation/test-types-list/test-types-list.html
+++ b/src/pages/testing/test-creation/test-types-list/test-types-list.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar [hideBackButton]="firstPage">
     <ion-buttons start *ngIf="firstPage">
-      <button ion-button (click)="cancelTypes()" color="primary">
+      <button ion-button (click)="cancelTypes()" color="light">
         Cancel
       </button>
     </ion-buttons>
