--- a/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.html
+++ b/src/pages/testing/vehicle/vehicle-lookup/vehicle-lookup.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar hideBackButton="true">
     <ion-buttons start>
-      <button ion-button (click)="close()" color="primary">
+      <button ion-button (click)="close()" color="light">
         Cancel
       </button>
     </ion-buttons>
