--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -7,7 +7,7 @@
             <button ion-button
                     [ngClass]="{buttonOpacity: changeOpacity}"
                     (click)="reviewTest()">
-                Review
+                Review and submit
             </button>
         </ion-buttons>
     </ion-navbar>
