--- a/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
+++ b/src/pages/testing/test-creation/test-type-details-input/test-type-details-input.html
@@ -1,35 +1,36 @@
 <ion-header>
 
-    <ion-navbar>
-        <ion-title>{{sectionName}}</ion-title>
-        <ion-buttons>
-            <button ion-button
-                    class="cancel"
-                    (click)="onCancel()">
-                Cancel
-            </button>
-        </ion-buttons>
-        <ion-buttons end>
-            <button ion-button
-                    (click)="onDone()">
-                Done
-            </button>
-        </ion-buttons>
-    </ion-navbar>
+  <ion-navbar>
+    <ion-title>{{sectionName}}</ion-title>
+    <ion-buttons>
+      <button ion-button
+              class="cancel"
+              (click)="onCancel()">
+        Cancel
+      </button>
+    </ion-buttons>
+    <ion-buttons end>
+      <button ion-button
+              (click)="onDone()">
+        Done
+      </button>
+    </ion-buttons>
+  </ion-navbar>
 
 </ion-header>
 
 
 <ion-content class="content-background-color-grey">
-    <ion-item-group>
-        <ion-item-divider padding-left>{{input.label.toUpperCase()}}</ion-item-divider>
-        <ion-item padding-left>
-            <ion-input [type]="input.type"
-                       [pattern]="input.type === testTypeFields.NUMBER ? patterns.NUMERIC : ''"
-                       [(ngModel)]="inputValue"
-                       (ngModelChange)="valueInputChange($event)"
-                       #valueInput></ion-input>
-        </ion-item>
-    </ion-item-group>
-    <p class="color-grey-1" padding-left>{{input.info}}</p>
+  <ion-item-group>
+    <ion-item-divider padding-left>{{input.label.toUpperCase()}}</ion-item-divider>
+    <ion-item padding-left
+              [ngClass]="{'error-incomplete-item': errorIncomplete && !inputValue}">
+      <ion-input [type]="input.type"
+                 [pattern]="input.type === testTypeFields.NUMBER ? patterns.NUMERIC : ''"
+                 [(ngModel)]="inputValue"
+                 (ngModelChange)="valueInputChange($event)"
+                 #valueInput></ion-input>
+    </ion-item>
+  </ion-item-group>
+  <p class="color-grey-1" padding-left>{{input.info}}</p>
 </ion-content>
