--- a/src/pages/testing/test-creation/test-create/test-create.html
+++ b/src/pages/testing/test-creation/test-create/test-create.html
@@ -49,7 +49,8 @@
       <button ion-item
               detail-none
               class="bottom-divider"
-              (click)="onOdometer(i)">
+              (click)="onOdometer(i)"
+              *ngIf="!isVehicleOfType(vehicle,VEHICLE_TYPE.TRL)">
         <h3 class="odometer-reading">Odometer reading</h3>
         <h3 item-end
             class="odometer-reading-status"
