--- a/src/pages/testing/test-creation/test-review/test-review.html
+++ b/src/pages/testing/test-creation/test-review/test-review.html
@@ -25,8 +25,10 @@
         <h3 item-end text-uppercase
             class="vehicle-category-status">{{vehicle.euVehicleCategory}}</h3>
       </ion-item>
-      <ion-item margin-left
-                class="bottom-divider height-60">
+      <ion-item 
+        margin-left
+        class="bottom-divider height-60"
+        *ngIf="!isVehicleOfType(vehicle,VEHICLE_TYPE.TRL)">
         <h3 class="odometer-reading">Odometer reading</h3>
         <h3 item-end
             class="odometer-reading-status">
