--- a/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.html
+++ b/src/pages/testing/vehicle/vehicle-brakes/vehicle-brakes.html
@@ -148,7 +148,7 @@
                     <h3>Brake actuator</h3>
                 </ion-label>
                 <div item-content padding-right>
-                    <p>{{ axle.axleBrakeProperties.brakeActuator }}</p>
+                    <p>{{ axle?.axleBrakeProperties?.brakeActuator }}</p>
                 </div>
             </ion-item>
 
@@ -157,7 +157,7 @@
                     <h3>Lever length</h3>
                 </ion-label>
                 <div item-content padding-right>
-                    <p>{{ axle.axleBrakeProperties.leverLenght }}</p>
+                    <p>{{ axle?.axleBrakeProperties?.leverLenght }}</p>
                 </div>
             </ion-item>
 
@@ -166,7 +166,7 @@
                     <h3>Spring brake parking</h3>
                 </ion-label>
                 <div item-content padding-right>
-                    <p>{{ axle.axleBrakeProperties.springBrakeParking }}</p>
+                    <p>{{ axle?.axleBrakeProperties?.springBrakeParking }}</p>
                 </div>
             </ion-item>
 
@@ -181,7 +181,7 @@
                     <h3>Load sensing valve</h3>
                 </ion-label>
                 <div item-content padding-right>
-                    <p>{{ vehicleData.techRecord.brakes.loadSensingValve }}</p>
+                    <p>{{ vehicleData.techRecord?.brakes?.loadSensingValve }}</p>
                 </div>
             </ion-item>
 
@@ -190,7 +190,7 @@
                     <h3>Antilock braking system</h3>
                 </ion-label>
                 <div item-content padding-right>
-                    <p>{{ vehicleData.techRecord.brakes.antilockBrakingSystem }}</p>
+                    <p>{{ vehicleData.techRecord?.brakes?.antilockBrakingSystem }}</p>
                 </div>
             </ion-item>
 
