--- a/src/pages/testing/vehicle/vehicle-history/vehicle-history.html
+++ b/src/pages/testing/vehicle/vehicle-history/vehicle-history.html
@@ -10,7 +10,8 @@
   <div text-uppercase
        text-center
        class="vehicle-header-vrm-number">
-    {{ vehicleData.vrm | formatVrm }}
+    <ng-container *ngIf="isVehicleOfType(vehicleData,VEHICLE_TYPE.TRL); else isVehicle">{{ vehicleData.trailerId }}</ng-container>
+    <ng-template #isVehicle>{{ vehicleData.vrm | formatVrm }}</ng-template>
   </div>
 
   <ion-list class="tests-list" *ngIf="testResultHistory.length">
