--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-navbar hideBackButton="true">
     <ion-buttons end>
-      <button ion-button (click)="createNewTestReport()">
+      <button ion-button (click)="createNewTestReport()" *ngIf="isCreateTestEnabled">
         Start test
       </button>
     </ion-buttons>
