--- a/src/pages/visit/visit-timeline/visit-timeline.html
+++ b/src/pages/visit/visit-timeline/visit-timeline.html
@@ -38,7 +38,7 @@
       <div class="timeline-item-content" *ngIf="timelineItem.activityType !== VISIT_TYPE.ACTIVITY_TYPE_WAIT">
         <p>{{ timelineItem.startTime | date: 'HH:mm' }} - {{ timelineItem.endTime | date: 'HH:mm' }}</p>
         <div *ngFor="let vehicle of timelineItem.vehicles">
-          <h2>Test ({{ vehicle.vrm | formatVrm }})</h2>
+          <h2>{{getVehicleIdentifier(vehicle)}}</h2>
           <span *ngFor="let vehicle of timelineItem.vehicles">
           <span *ngIf="timelineItem.status != TEST_REPORT_STATUS.CANCELLED">
                     <p class="timeline-message" *ngFor="let vehicleTest of vehicle.testTypes">
